fix short messages list alignment

--- a/app/js/components/chat-ui/chat-scrollview/styles.css
+++ b/app/js/components/chat-ui/chat-scrollview/styles.css
@@ -5,7 +5,6 @@ chat-scrollview {
   overscroll-behavior: contain;
 
   position: absolute;
-  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
